admin checkbox fixes

--- a/src/admin/css/plugin-name-admin.css
+++ b/src/admin/css/plugin-name-admin.css
@@ -10,7 +10,7 @@
 	}
 
 	input[type="checkbox"] {
-		width: 40px;
+		width: 35px;
 		height: 25px;
 		border-radius: 10px;
 		position: relative;
@@ -18,7 +18,7 @@
 
 	input[type="checkbox"]::before {
 		content: "";
-		width: 70%;
+		width: 67%;
 		height: 100%;
 		border: 1px solid #c4c4c4;
 		background: #fff;
@@ -27,6 +27,7 @@
 		top: -1px;
 		left: -5px;
 		z-index: 20;
+		box-shadow: 0 3px 2px -2px gray;
 	} 
 
 	input[type="checkbox"]:checked {
@@ -35,12 +36,13 @@
 
 	input[type="checkbox"]:checked::before {
 		content: "";
-		width: 70%;
+		width: 67%;
 		height: 100%;
 		position: absolute;
-		top: 1px;
+		top: 2px;
 		left: 20px;
 		right: 0;
+		border: 1px solid #4CE071;
 	} 
 
 	input[type="checkbox"]:checked {
