added submit button and another row for sorting the buttons

--- a/src/admin/css/bpp-admin.css
+++ b/src/admin/css/bpp-admin.css
@@ -8,6 +8,10 @@
 		text-align: center;
 	}
 
+	.float-right {
+		float: right;
+	}
+
 	.bpp-input > input[type="checkbox"] {
 		width: 35px;
 		height: 25px;
